--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
-/* Mobile version */
+/* Mobile version 
+https://gist.github.com/gokulkrishh/242e68d1ee94ad05f488
+*/
 
 body   {
     overflow-x: hidden;                                        /* source: Nick Craver https://stackoverflow.com/questions/2594389/hide-html-horizontal-but-not-vertical-scrollbar*/
@@ -6,6 +8,7 @@ body   {
     font-family: 'Raleway', sans-serif;                        /**/
         }
 
+        /*
 hr { width:100%; height:1px; background: #212121 }
 
 .title {
@@ -17,10 +20,102 @@ hr { width:100%; height:1px; background: #212121 }
      font-size: 40px;
            }
 
+           */
 
 
+@media (min-width: 481px) and (max-width: 767px) {
 
 
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  background: url("https://images.pexels.com/photos/1096658/pexels-photo-1096658.jpeg?auto=compress&cs=tinysrgb&h=650&w=940")
+    center/cover no-repeat;
+  font: bold 1rem Consolas;
+}
+
+.open,
+.close {
+  display: inline-block;
+  padding: 30px 0 0 30px;
+  cursor: pointer;
+  font-size: 2rem;
+  color: #fff;
+  text-decoration: none;
+  transition: 0.5s;
+}
+
+.overlay {
+  position: fixed;
+  width: 0;
+  top: 0;
+  background-color: #333;
+  opacity: 0.7;
+  overflow-x: hidden;
+  height: 100%;
+  transition: 0.5s;
+}
+
+.overlay-content {
+  text-align: center;
+  position: relative;
+  width: 100%;
+  padding-top: 50px;
+  margin-top: 30px;
+}
+
+.overlay-content a {
+  font-size: 2rem;
+  color: #fff;
+  display: block;
+  padding: 10px;
+  margin-bottom: 4px;
+  text-decoration: none;
+  transition: 0.3s;
+  position: relative;
+}
+.overlay-content a:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 0%;
+  transform: translateX(-50%);
+  height: 3px;
+  background: #fff;
+  transition: 0.3s;
+  display: block;
+}
+.overlay-content a:hover {
+  color: #ff9f1a;
+}
+
+.overlay-content a:hover:after {
+  width: 25%;
+}
+
+}
 
 
 /* Desktop version */
+
+
+
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+  
+    
+  }
+
+
+  @media (min-width: 1281px) {
+  
+    
+  }
