--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,6 @@ body   {
         }
 
         /*
-hr { width:100%; height:1px; background: #212121 }
-
 .title {
      width: 100%;
      margin-top: 0px;
@@ -32,22 +30,14 @@ hr { width:100%; height:1px; background: #212121 }
   box-sizing: border-box;
 }
 
-html,
-body {
-  width: 100%;
-  height: 100%;
-  background: url("https://images.pexels.com/photos/1096658/pexels-photo-1096658.jpeg?auto=compress&cs=tinysrgb&h=650&w=940")
-    center/cover no-repeat;
-  font: bold 1rem Consolas;
-}
-
+/* Humburger menu https://codepen.io/renato2016/pen/yLBxrWp */
 .open,
 .close {
   display: inline-block;
-  padding: 30px 0 0 30px;
+  padding: 20px 0 0 20px;
   cursor: pointer;
-  font-size: 2rem;
-  color: #fff;
+  font-size: 70px;
+  color: #212121;
   text-decoration: none;
   transition: 0.5s;
 }
@@ -56,8 +46,8 @@ body {
   position: fixed;
   width: 0;
   top: 0;
-  background-color: #333;
-  opacity: 0.7;
+  background-color: #005F63 ;
+  opacity: 0.95;
   overflow-x: hidden;
   height: 100%;
   transition: 0.5s;
@@ -67,13 +57,11 @@ body {
   text-align: center;
   position: relative;
   width: 100%;
-  padding-top: 50px;
-  margin-top: 30px;
 }
 
 .overlay-content a {
-  font-size: 2rem;
-  color: #fff;
+  font-size: 50px;
+  color: #E4F4F3 ;
   display: block;
   padding: 10px;
   margin-bottom: 4px;
@@ -89,17 +77,25 @@ body {
   width: 0%;
   transform: translateX(-50%);
   height: 3px;
-  background: #fff;
+  background: #212121 ;
   transition: 0.3s;
   display: block;
 }
 .overlay-content a:hover {
-  color: #ff9f1a;
+  color: #E4F4F3  ;
 }
 
 .overlay-content a:hover:after {
   width: 25%;
 }
+
+
+.circle {
+    border-radius: 50%;
+}
+
+
+
 
 }
 
