--- a/styles.css
+++ b/styles.css
@@ -90,9 +90,44 @@ body   {
 }
 
 
+
 .circle {
     border-radius: 50%;
 }
+
+.hidden {
+    display: none;
+}
+
+.buttons {
+    border-radius: 5px;
+    padding: 15px 25px;
+    font-size: 22px;
+    text-decoration: none;
+    margin: 20px;
+    color: #E4F4F3 ;
+    position: relative;
+    display: inline-block;
+    background-color: #53B06D ;
+    box-shadow: #212121 ;
+  }
+
+  .buttons:active {
+    transform: translate(0px, 5px);
+    -webkit-transform: translate(0px, 5px);
+    box-shadow: 0px 3px 0px 0px;
+  }
+
+  .btn {
+    background-color: #53B06D ;
+    box-shadow: 0px 5px 0px 0px #212121;
+  }
+  
+  .btn:hover {
+    background-color: #53B06D ;
+    font-size: 24px;
+  }
+
 
 
 
