reference buttons styles

--- a/styles.css
+++ b/styles.css
@@ -99,6 +99,8 @@ body   {
     display: none;
 }
 
+
+/* For buttons styles https://codepen.io/benngagne/pen/bCkyr*/
 .buttons {
     border-radius: 5px;
     padding: 15px 25px;
