--- a/styles.css
+++ b/styles.css
@@ -8,22 +8,29 @@ body   {
     text-align: justify;                                       /*justify the text*/
     font-family: 'Raleway', sans-serif; 
     height: 100%;
+    width: 100%;
 }
 
 .grid {
   display: grid;
   grid-gap: 10px;
   grid-template-columns: repeat(10, 90px ) ;
-  grid-template-rows: repeat(7, 90px ) ;
+  grid-template-rows: repeat(6, 90px ) ;
   background: linear-gradient(0deg, rgba(228,244,243,1) 0%, rgba(0,95,99,1) 100%);
 }
 
 .box {
-  background-color: rgb(125, 201, 231);
-  color: #fff;
+/*  background-color: rgb(125, 201, 231); */
 }
 
+.download :hover {
+  opacity: 0.8;
+   }
 
+.sociallink :hover {
+    opacity: 0.6;
+  }   
+ 
 
 @media (min-width: 481px) and (max-width: 767px) {
 
@@ -68,7 +75,7 @@ body   {
   font-size: 50px;
   color: #E4F4F3 ;
   display: block;
-  padding: 10px;
+  padding: 25px;
   /*margin-bottom: 4px;*/
   text-decoration: none;
   transition: 0.3s;
@@ -88,6 +95,7 @@ body   {
 }
 .overlay-content a:hover {
   color: #E4F4F3  ;
+  
 }
 
 .overlay-content a:hover:after {
@@ -97,15 +105,26 @@ body   {
 .logo {
   grid-column: 3 / 5 ;
   position: relative;
-  font-size: 30px;
+  font-size: 40px;
   text-align: center;
+  font-weight: bolder;
   padding-top: 30px;
 }
 
+.logolink {
+  text-decoration: none;
+  color: #212121;
+}
 
-.hidden {
+
+.textshow {
   display: none;
 }
+
+.circle {
+  display: none;
+}
+
 
 .name {
   grid-column: 2 / 6 ;
@@ -122,7 +141,7 @@ body   {
   font-size: 24px;
   text-align: center;
   /*box-shadow: #212121 ; */
-  grid-column: 2 / 6 ;
+  grid-column: 3 / 5 ;
   grid-row: 4 ;
 }
 
@@ -143,10 +162,6 @@ body   {
 
   }
 
-  .download :hover {
-    font-size: 30px;
-  }
-
 /* For buttons styles https://codepen.io/benngagne/pen/bCkyr*/
 .buttons {
     border-radius: 5px;
@@ -157,6 +172,8 @@ body   {
     display: inline-block;
     background-color: #53B06D ;
     box-shadow: #212121 ;
+    height: 30px;
+    padding-top: 15px;
   }
 
   .buttons:active{
@@ -208,10 +225,11 @@ text-align: center;
 }
 
 .socialicon{
-width: 20px;
-height: 20px;
+width: 25px;
+height: 25px;
 border-radius: 50%;
 }
+
 
 
 }
@@ -231,107 +249,205 @@ border-radius: 50%;
 
 /* Tablets and Desktop version */
 @media (min-width: 768px) {
-
+  .grid {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(10, 150px ) ;
+    grid-template-rows: repeat(7, 90px ) ;
+    background: linear-gradient(0deg, rgba(228,244,243,1) 0%, rgba(0,95,99,1) 100%);
+  }
 
 
 
 
   .open,
-.close {
-  display: inline-block;
-  padding: 20px 0 0 20px;
-  cursor: pointer;
-  font-size: 70px;
-  color: #212121;
-  text-decoration: none;
-  transition: 0.5s;
-}
-
-.overlay {
-  position: fixed;
-  width: 0;
-  top: 0;
-  background-color: #005F63 ;
-  opacity: 0.95;
-  overflow-x: hidden;
-  height: 100%;
-  transition: 0.5s;
-}
-
-.overlay-content {
-  text-align: center;
-  position: relative;
-  width: 100%;
-}
-
-.overlay-content a {
-  font-size: 50px;
-  color: #E4F4F3 ;
-  display: block;
-  padding: 10px;
-  margin-bottom: 4px;
-  text-decoration: none;
-  transition: 0.3s;
-  position: relative;
-}
-.overlay-content a:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  width: 0%;
-  transform: translateX(-50%);
-  height: 3px;
-  background: #212121 ;
-  transition: 0.3s;
-  display: block;
-}
-.overlay-content a:hover {
-  color: #E4F4F3  ;
-}
-
-.overlay-content a:hover:after {
-  width: 25%;
-}
-
-.logo {
-  position: relative;
-margin-left: 25%;
-}
-
-
-
-
-
-.name {
-  display: none;
-  grid-row-start: 4;
-  grid-column: 2/8;
-
-}
-
-.circle {
-  border-radius: 50%;
-}
-
-.social {
+  .close {
+    display: inline-block;
+    cursor: pointer;
+    font-size: 70px;
+    color: #212121;
+    text-decoration: none;
+    transition: 0.5s;
+    width:100%;    
+  }
   
-}
-.sociallink  {
+  .overlay {
+    position: fixed;
+    width: 0;
+    top: 0;
+    background-color: #005F63 ;
+    opacity: 0.95;
+    overflow-x: hidden;
+    height: 100%;
+    transition: 0.5s;
+    padding-top: 10px;
+  }
+  
+  .overlay-content {
+    text-align: center;
+    position: relative;
+    width: 100%;
+  }
+  
+  .overlay-content a {
+    font-size: 50px;
+    color: #E4F4F3 ;
+    display: block;
+    padding: 10px;
+    /*margin-bottom: 4px;*/
+    text-decoration: none;
+    transition: 0.3s;
+    position: relative;
+  }
+  .overlay-content a:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    width: 0%;
+    transform: translateX(-50%);
+    height: 3px;
+    background: #212121 ;
+    transition: 0.3s;
+    display: block;
+  }
+  .overlay-content a:hover {
+    color: #E4F4F3  ;
+  }
+  
+  .overlay-content a:hover:after {
+    width: 25%;
+  }
+  
+  .logo {
+    grid-column: 4 / 6 ;
+    position: relative;
+    font-size: 40px;
+    font-weight: bolder;
+    text-align: center;
+    padding-top: 30px;
+  }
+  
+  .logolink {
+    text-decoration: none;
+    color: #212121;
+  }
+  
+  .name {
+    display: none;
+  }
+
+  .textshow {
+    display: inline;
+    grid-column: 2 / 6 ;
+    grid-row: 2 ;
+    font-size: 36px ;
+  }
+
+
+  .circle {
+    display: inline;
+    grid-column: 7 / 8 ;
+    grid-row: 3 ;
+    border-radius: 50%;
+  }
+  
+  
+  .viewportfolio {
+    padding-top: 25px;
+    background-color: rgb(144, 185, 196) ;
+    font-size: 24px;
+    text-align: center;
+    grid-column: 7 / 8 ;
+    grid-row: 5 ;
+  }
+  
+  .viewportfolio:hover {
+    background-color: #53B06D ;
+  }
+  
+  
+  .viewp {
+    text-decoration: none;
+    color: #212121 ;
+    text-align: center;
+  }
+  
+  .download {
+    grid-column: 3 / 5;
+    grid-row: 4;
+    font-size: 30px; 
+    text-align: center; 
+    }
+  
+    .download :hover {
+    }
+  
+  .buttons {
+      border-radius: 5px;
+      font-size: 30px;
+      text-decoration: none;
+      color: #E4F4F3 ;
+      display: inline-block;
+      background-color: #53B06D ;
+      box-shadow: #212121 ;
+      height: 50px;
+      padding-top: 15px;
+    }
+  
+    .buttons:active{
+      transform: translate(0px, 5px);
+      -webkit-transform: translate(0px, 5px);
+      box-shadow: 0px 3px 0px 0px;
+    }
+  
+    .btn {
+      background-color: #53B06D ;
+      box-shadow: 0px 5px 0px 0px #212121;
+      width: 100%;
+    }
+    
+    .btn:hover {
+      background-color: #53B06D ;
+      font-style: bold;
+    }
+  
+  
+  /* Social media links */
+  .sociallink  {
   text-decoration: none;
   color: #212121;
-  width: 20%;
   text-align: center;
   }
-
-  .sociallink:hover {
-    visibility:visible;
+  
+  /* when the mouse is over the social media links*/
+  .socialmedia {
+    grid-column: 3 / 7;
+    grid-row: 6;
+    padding-top: 30px;
+    }
+  
+ .sul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    width: 100%;
+    }
+  
+  .sociallist .sociallink {
+    overflow: hidden;
+    font-size: 12px;
+    width: 25%;
+    float: left;
   }
-
-.socialicon{
+  
+  .socialicon{
   width: 50px;
   height: 50px;
+  border-radius: 50%;
   }
+
     
   }
 
