--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,9 @@ body   {
 }
 
 .box {
-/*  background-color: rgb(125, 201, 231); */
+
+ /* background-color: rgb(125, 201, 231); */
+  
 }
 
 .download :hover {
@@ -72,7 +74,7 @@ body   {
 }
 
 .overlay-content a {
-  font-size: 50px;
+  font-size: 35px;
   color: #E4F4F3 ;
   display: block;
   padding: 25px;
@@ -109,6 +111,8 @@ body   {
   text-align: center;
   font-weight: bolder;
   padding-top: 30px;
+  
+  padding-left: 30px;
 }
 
 .logolink {
@@ -320,12 +324,14 @@ border-radius: 50%;
   }
   
   .logo {
-    grid-column: 4 / 6 ;
+    grid-column: 3 / 7 ;
     position: relative;
     font-size: 40px;
     font-weight: bolder;
     text-align: center;
     padding-top: 30px;
+    padding-left: 70px;
+  
   }
   
   .logolink {
