--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,8 @@ body   {
 .grid {
   display: grid;
   grid-gap: 5px;
-  grid-template-columns: repeat(10, 17px ) ;
-  grid-template-rows: repeat(6, 90px ) ;
+  grid-template-columns: repeat(10, 10px ) ;
+  grid-template-rows: repeat(7, 26px ) ;
   background: linear-gradient(0deg, rgba(228,244,243,1) 0%, rgba(0,95,99,1) 100%);
 }
 
@@ -34,7 +34,7 @@ body   {
   }   
  
 
-@media (min-width: 360px) and (max-width: 767px) {
+@media (min-width: 360px) and (max-width: 640px) {
 
 /*
 * {
@@ -48,11 +48,13 @@ body   {
 .close {
   display: inline-block;
   cursor: pointer;
-  font-size: 70px;
+  font-size: 18px;
   color: #212121;
   text-decoration: none;
   transition: 0.5s;
-  width:100%;    
+  width:100%;   
+  grid-column: 1 / 2 ;
+ 
 }
 
 .overlay {
@@ -74,10 +76,10 @@ body   {
 }
 
 .overlay-content a {
-  font-size: 35px;
+  font-size: 18px;
   color: #E4F4F3 ;
   display: block;
-  padding: 25px;
+  padding: 10px;
   /*margin-bottom: 4px;*/
   text-decoration: none;
   transition: 0.3s;
@@ -105,14 +107,13 @@ body   {
 }
 
 .logo {
-  grid-column: 3 / 5 ;
+  grid-column: 3 / 7 ;
   position: relative;
-  font-size: 40px;
+  font-size: 14px;
   text-align: center;
   font-weight: bolder;
-  padding-top: 30px;
-  
-  padding-left: 30px;
+  padding-top: 5px;
+  padding-left: 0px;
 }
 
 .logolink {
@@ -131,21 +132,22 @@ body   {
 
 
 .name {
-  grid-column: 2 / 6 ;
-  grid-row: 3 ;
-  font-size: 30px;
+  grid-column: 3 / 6 ;
+  grid-row: 2 ;
+  font-size: 14px;
   color: #005F63;
   text-align: center;
 }
 
 
 .viewportfolio {
-  padding-top: 25px;
+  padding-top: 0px;
   background-color: rgb(144, 185, 196) ;
-  font-size: 24px;
+  font-size: 8px;
   text-align: center;
+  padding-top: 7px;
   /*box-shadow: #212121 ; */
-  grid-column: 3 / 5 ;
+  grid-column: 3 / 7 ;
   grid-row: 4 ;
 }
 
@@ -161,34 +163,35 @@ body   {
 }
 
 .download {
-  grid-column: 3 / 5;
+  grid-column: 3 / 7;
   grid-row: 5;
+  margin-top: 12px;
 
   }
 
 /* For buttons styles https://codepen.io/benngagne/pen/bCkyr*/
 .buttons {
     border-radius: 5px;
-    font-size: 16px;
+    font-size: 6px;
     text-decoration: none;
-    margin: 20px;
+    margin: 0px;
     color: #E4F4F3 ;
     display: inline-block;
     background-color: #53B06D ;
     box-shadow: #212121 ;
-    height: 30px;
-    padding-top: 15px;
+    height: 15px;
+    padding-top: 10px;
   }
 
   .buttons:active{
     transform: translate(0px, 5px);
     -webkit-transform: translate(0px, 5px);
-    box-shadow: 0px 3px 0px 0px;
+    box-shadow: 0px 2px 0px 0px;
   }
 
   .btn {
     background-color: #53B06D ;
-    box-shadow: 0px 5px 0px 0px #212121;
+    box-shadow: 0px 3px 0px 0px #212121;
   }
   
   .btn:hover {
@@ -207,9 +210,9 @@ text-align: center;
 
 /* when the mouse is over the social media links*/
 .socialmedia {
-  grid-column: 3 / 5;
-  grid-row: 6;
-  padding-top: 60px;
+  grid-column: 2 / 8;
+  grid-row: 7;
+  padding-top: 0px;
   }
 
   .sul {
@@ -223,14 +226,14 @@ text-align: center;
 .sociallist .sociallink {
   list-style-type: none;
   overflow: hidden;
-  font-size: 12px;
+  font-size: 4px;
   width: 25%;
   float: left;
 }
 
 .socialicon{
-width: 25px;
-height: 25px;
+width: 10px;
+height: 10px;
 border-radius: 50%;
 }
 
