--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@ body   {
 
 .box {
 
- /* background-color: rgb(125, 201, 231); */
+  /*background-color: rgb(125, 201, 231); */
   
 }
 
@@ -33,8 +33,8 @@ body   {
   .grid {
     display: grid;
     grid-gap: 5px;
-    grid-template-columns: repeat(7, 38px ) ;
-    grid-template-rows: repeat(7, 74px ) ;
+    grid-template-columns: repeat(7, 102px) ;
+    grid-template-rows: repeat(8, 160px ) ;
     background: linear-gradient(0deg, rgba(228,244,243,1) 0%, rgba(0,95,99,1) 100%);
   }
 
@@ -51,12 +51,12 @@ body   {
 .close {
   display: inline-block;
   cursor: pointer;
-  font-size: 80px;
+  font-size: 100px;
   color: #212121;
   text-decoration: none;
   transition: 0.5s;
   width:100%;   
-  margin-top: -20px;
+  margin-top: 0px;
  
 }
 
@@ -69,7 +69,7 @@ body   {
   overflow-x: hidden;
   height: 100%;
   transition: 0.5s;
-  padding-top: -20px;
+  padding-top: 0px;
 }
 
 .overlay-content {
@@ -79,10 +79,10 @@ body   {
 }
 
 .overlay-content a {
-  font-size: 60px;
+  font-size: 100px;
   color: #E4F4F3 ;
   display: block;
-  padding: 10px;
+  padding: 20px;
   /*margin-bottom: 4px;*/
   text-decoration: none;
   transition: 0.3s;
@@ -110,12 +110,12 @@ body   {
 }
 
 .logo {
-  grid-column: 3 / 7 ;
+  grid-column: 3 / 6 ;
   position: relative;
-  font-size: 30px;
+  font-size: 70px;
   text-align: center;
   font-weight: bolder;
-  padding-top: 18px;
+  padding-top: 25px;
   padding-left: 0px;
 }
 
@@ -136,8 +136,8 @@ body   {
 
 .name {
   grid-column: 3 / 6 ;
-  grid-row: 2 ;
-  font-size: 40px;
+  grid-row: 3/4 ;
+  font-size: 60px;
   color: #005F63;
   text-align: center;
 }
@@ -146,12 +146,12 @@ body   {
 .viewportfolio {
   padding-top: 0px;
   background-color: rgb(144, 185, 196) ;
-  font-size: 24px;
+  font-size: 40px;
   text-align: center;
   padding-top: 0px;
   /*box-shadow: #212121 ; */
-  grid-column: 3 / 7 ;
-  grid-row: 4 ;
+  grid-column: 3 / 6 ;
+  grid-row: 5;
 }
 
 .viewportfolio:hover {
@@ -166,8 +166,8 @@ body   {
 }
 
 .download {
-  grid-column: 3 / 7;
-  grid-row: 5;
+  grid-column: 3 / 6;
+  grid-row: 6;
   margin-top: 12px;
 
   }
@@ -175,14 +175,14 @@ body   {
 /* For buttons styles https://codepen.io/benngagne/pen/bCkyr*/
 .buttons {
     border-radius: 5px;
-    font-size: 18px;
+    font-size: 28px;
     text-decoration: none;
     margin: 0px;
     color: #E4F4F3 ;
     display: inline-block;
     background-color: #53B06D ;
     box-shadow: #212121 ;
-    height: 50px;
+    height: 90px;
     margin-top: 20px;
     padding-top: 20px;
   }
@@ -214,8 +214,8 @@ text-align: center;
 
 /* when the mouse is over the social media links*/
 .socialmedia {
-  grid-column: 2 / 8;
-  grid-row: 7;
+  grid-column: 2 / 7;
+  grid-row: 8;
   padding-top: 0px;
   }
 
@@ -236,8 +236,8 @@ text-align: center;
 }
 
 .socialicon{
-width: 20px;
-height: 20px;
+width: 45px;
+height: 45px;
 border-radius: 50%;
 }
 
