--- a/styles.css
+++ b/styles.css
@@ -194,12 +194,6 @@ body   {
   
   
   /* Social media links */
-  .sociallink  {
-  text-decoration: none;
-  color: #212121;
-  width: 20%;
-  text-align: center;
-  }
   
   /* when the mouse is over the social media links*/
   .socialmedia {
@@ -208,29 +202,30 @@ body   {
     padding-top: 0px;
     }
   
-    .sul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      width: 100%;
-      }
+  .sul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    width: 100%;
+  }
   
   .sociallist .sociallink {
-    list-style-type: none;
-    overflow: hidden;
-    font-size: 4px;
+    font-size: 45px;
     width: 25%;
     float: left;
+    background-color: #212121;;
+    color: white;
+    opacity:0.2;
+    border-radius: 50%;
+    text-decoration: none;
+    text-align: center;
   }
-  
-  .socialicon{
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
+
+.sociallist:hover .sociallink {
+    opacity:0.8;
   }
-  
-  
+
   
   }
   
@@ -424,16 +419,11 @@ body   {
 
 
 /* Social media links */
-.sociallink  {
-text-decoration: none;
-color: #212121;
-width: 20%;
-text-align: center;
-}
+
 
 /* when the mouse is over the social media links*/
 .socialmedia {
-  grid-column: 2 / 7;
+  grid-column: 3 / 6;
   grid-row: 8;
   padding-top: 0px;
   }
@@ -447,20 +437,16 @@ text-align: center;
     }
 
 .sociallist .sociallink {
-  list-style-type: none;
-  overflow: hidden;
-  font-size: 4px;
+  font-size: 55px;
   width: 25%;
   float: left;
+  background-color: #212121;;
+  color: white;
+  opacity:0.2;
+  border-radius: 50%;
+  text-decoration: none;
+  text-align: center;
 }
-
-.socialicon{
-width: 45px;
-height: 45px;
-border-radius: 50%;
-}
-
-
 
 }
 
@@ -646,15 +632,11 @@ border-radius: 50%;
   
   
   /* Social media links */
-  .sociallink  {
-  text-decoration: none;
-  color: #212121;
-  text-align: center;
-  }
+
   
   /* when the mouse is over the social media links*/
   .socialmedia {
-    grid-column: 3 / 7;
+    grid-column: 4 / 10;
     grid-row: 6;
     padding-top: 30px;
     }
@@ -669,17 +651,18 @@ border-radius: 50%;
   
   .sociallist .sociallink {
     overflow: hidden;
-    font-size: 12px;
-    width: 25%;
+    font-size: 55px;
+    width: 10%;
     float: left;
+    background-color: #212121;;
+    color: white;
+    opacity:0.2;
+    border-radius: 50%;
+    text-decoration: none;
+    text-align: center;
+
   }
   
-  .socialicon{
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  }
-
     
   }
 
