--- a/styles.css
+++ b/styles.css
@@ -139,6 +139,11 @@ body   {
     grid-row: 5;
   }
   
+  h1 {
+    grid-column: 2 / 5 ;
+    float:left;
+  }
+
   .viewportfolio:hover {
     background-color: #631A00 ;
   }
@@ -226,6 +231,31 @@ body   {
     opacity:0.8;
   }
 
+  table{
+    width: 70%;
+  }
+  .form {
+    grid-column: 2 / 8;
+    width: 100%;
+  }
+  
+  .submit{
+   float:right;
+    font-size: 35px; 
+    text-align: center; 
+    padding-top: 0px;
+  
+  }
+  
+  .fieldinput {
+    width: 100%;
+    height: 50px;
+  }
+  
+  .messagebox {
+    width: 100%;
+    height: 90px;
+  }
   
   }
   
@@ -356,6 +386,10 @@ body   {
   text-align: center;
 }
 
+h1 {
+  grid-column: 2 / 5 ;
+  float:left;
+}
 
 .viewportfolio {
   padding-top: 0px;
@@ -446,6 +480,28 @@ body   {
   border-radius: 50%;
   text-decoration: none;
   text-align: center;
+}
+
+.form {
+  grid-column: 2 / 8;
+  width: 100%;
+}
+
+.submit{
+  font-size: 35px; 
+  text-align: center; 
+  padding-top: 0px;
+
+}
+
+.fieldinput {
+  width: 100%;
+  height: 30px;
+}
+
+.messagebox {
+  width: 100%;
+  height: 90px;
 }
 
 }
@@ -570,7 +626,13 @@ body   {
     border-radius: 50%;
   }
   
-  
+  h1 {
+    grid-column: 2 / 5 ;
+    float:left;
+  }
+
+
+
   .viewportfolio {
     padding-top: 25px;
     background-color: rgb(144, 185, 196) ;
@@ -598,8 +660,6 @@ body   {
     text-align: center; 
     }
   
-    .download :hover {
-    }
   
   .buttons {
       border-radius: 5px;
@@ -639,7 +699,7 @@ body   {
     grid-column: 4 / 10;
     grid-row: 6;
     padding-top: 30px;
-    }
+  }
   
  .sul {
     list-style-type: none;
@@ -647,7 +707,7 @@ body   {
     padding: 0;
     overflow: hidden;
     width: 100%;
-    }
+  }
   
   .sociallist .sociallink {
     overflow: hidden;
@@ -663,6 +723,27 @@ body   {
 
   }
   
-    
+.form {
+  grid-column: 2 / 8;
+  width: 100%;
+}
+
+.submit{
+  font-size: 35px; 
+  text-align: center; 
+  padding-top: 0px;
+
+}
+
+.fieldinput {
+  width: 100%;
+  height: 30px;
+}
+
+.messagebox {
+  width: 100%;
+  height: 90px;
+}
+
   }
 
