--- a/styles.css
+++ b/styles.css
@@ -232,29 +232,32 @@ body   {
   }
 
   table{
-    width: 70%;
+    width: 100%;
   }
   .form {
-    grid-column: 2 / 8;
+    grid-column: 3 / 8;
     width: 100%;
+    color: #212121;
   }
   
   .submit{
-   float:right;
-    font-size: 35px; 
+    font-size: 20px; 
     text-align: center; 
     padding-top: 0px;
-  
+    float:right;
+
   }
   
   .fieldinput {
     width: 100%;
-    height: 50px;
+    height: 25px;
+    margin-top: 10%;
   }
   
   .messagebox {
     width: 100%;
-    height: 90px;
+    height: 60px;
+    margin-top: 10%;
   }
   
   }
@@ -389,6 +392,7 @@ body   {
 h1 {
   grid-column: 2 / 5 ;
   float:left;
+  font-size: 55px;
 }
 
 .viewportfolio {
@@ -483,25 +487,26 @@ h1 {
 }
 
 .form {
-  grid-column: 2 / 8;
+  grid-column: 2 / 7;
   width: 100%;
+  font-size: 40px;
 }
 
 .submit{
-  font-size: 35px; 
-  text-align: center; 
+  font-size: 40px; 
   padding-top: 0px;
-
+  margin-top: 10%;
+  
 }
 
 .fieldinput {
   width: 100%;
-  height: 30px;
+  height: 60px;
 }
 
 .messagebox {
   width: 100%;
-  height: 90px;
+  height: 160px;
 }
 
 }
