about and contact changes size

--- a/styles.css
+++ b/styles.css
@@ -140,8 +140,13 @@ body   {
   }
   
   h1 {
-    grid-column: 2 / 5 ;
+    grid-column: 2 / 4 ;
     float:left;
+  }
+  
+  .position {
+    grid-column: 3 / 5 ;
+    grid-row: 3 ;
   }
 
   .viewportfolio:hover {
@@ -160,6 +165,13 @@ body   {
     color: #E4F4F3;
   }
   
+  .circle {
+    display: inline;
+    grid-column: 7 / 8 ;
+    grid-row: 3 ;
+    border-radius: 50%;
+  }
+
   .download {
     grid-column: 3 / 6;
     grid-row: 6;
@@ -197,7 +209,36 @@ body   {
       color: #E4F4F3 ;
     }
   
+
+    .downloadabout {
+      grid-column: 7 / 9 ;
+      grid-row: 6 ;
+      height:30px;
+      }
+
+
+    .dbuttons {
+      text-decoration: none;
+      color: #E4F4F3 ;
+      display: inline-block;
+      background-color: #631A00 ;
+      box-shadow: #212121 ;
+      padding-top: 15px;
+      height: 30px;
+    }
   
+
+    /*About page*/
+
+.longtext {
+	display: none
+}
+
+
+.shorttext {
+  grid-column: 3 / 6;
+  grid-row: 5; 
+}
   /* Social media links */
   
   /* when the mouse is over the social media links*/
@@ -235,7 +276,7 @@ body   {
     width: 100%;
   }
   .form {
-    grid-column: 3 / 8;
+    grid-column: 3 / 6;
     width: 100%;
     color: #212121;
   }
@@ -244,8 +285,6 @@ body   {
     font-size: 20px; 
     text-align: center; 
     padding-top: 0px;
-    float:right;
-
   }
   
   .fieldinput {
@@ -496,7 +535,7 @@ h1 {
   font-size: 40px; 
   padding-top: 0px;
   margin-top: 10%;
-  
+
 }
 
 .fieldinput {
@@ -557,7 +596,6 @@ h1 {
     overflow-x: hidden;
     height: 100%;
     transition: 0.5s;
-    padding-top: 10px;
   }
   
   .overlay-content {
@@ -597,7 +635,7 @@ h1 {
   }
   
   .logo {
-    grid-column: 3 / 7 ;
+    grid-column: 4 / 7 ;
     position: relative;
     font-size: 40px;
     font-weight: bolder;
@@ -632,10 +670,16 @@ h1 {
   }
   
   h1 {
-    grid-column: 2 / 5 ;
+    grid-column: 2 / 4 ;
     float:left;
   }
 
+  .position {
+    grid-column: 3 / 5 ;
+    grid-row: 3 ;
+
+
+  }
 
 
   .viewportfolio {
@@ -645,6 +689,7 @@ h1 {
     text-align: center;
     grid-column: 7 / 8 ;
     grid-row: 5 ;
+    height:50px;
   }
   
   .viewportfolio:hover {
@@ -664,6 +709,13 @@ h1 {
     font-size: 30px; 
     text-align: center; 
     }
+
+    .downloadabout {
+      background-color: rgb(144, 185, 196) ;
+      grid-column: 7 / 8 ;
+      grid-row: 5 ;
+      height:50px;
+      }
   
   
   .buttons {
@@ -677,6 +729,17 @@ h1 {
       height: 50px;
       padding-top: 15px;
     }
+
+    .dbuttons {
+      text-decoration: none;
+      color: #E4F4F3 ;
+      display: inline-block;
+      background-color: #631A00 ;
+      box-shadow: #212121 ;
+      padding-top: 25px;
+      height: 50px;
+    }
+
   
     .buttons:active{
       transform: translate(0px, 5px);
@@ -689,15 +752,37 @@ h1 {
       box-shadow: 0px 5px 0px 0px #212121;
       width: 100%;
     }
+    .dbtn {
+      background-color: #631A00 ;
+      box-shadow: 0px 5px 0px 0px #212121;
+      width: 100%;
+    }
+
+
     
     .btn:hover {
       background-color: #631A00 ;
       font-style: bold;
     }
   
-  
-  /* Social media links */
 
+    
+/*About page*/
+
+.longtext {
+	display: none
+}
+
+
+.shorttext {
+  grid-column: 3 / 6;
+  grid-row: 5; 
+}
+
+
+
+
+  /* Social media links */
   
   /* when the mouse is over the social media links*/
   .socialmedia {
@@ -727,28 +812,27 @@ h1 {
     text-align: center;
 
   }
+
+  .form {
+    grid-column: 3 / 8;
+    font-size: 20px;
+    padding-top: 0px;
+margin:0;
+  }
   
-.form {
-  grid-column: 2 / 8;
-  width: 100%;
-}
-
-.submit{
-  font-size: 35px; 
-  text-align: center; 
-  padding-top: 0px;
-
-}
-
-.fieldinput {
-  width: 100%;
-  height: 30px;
-}
-
-.messagebox {
-  width: 100%;
-  height: 90px;
-}
+  .submit{
+    font-size: 20px; 
+    padding-top: 0px;
+  
+  }
+  
+  .fieldinput {
+    height: 18px;
+  }
+  
+  .messagebox {
+    height: 160px;
+  }
 
   }
 
