--- a/styles.css
+++ b/styles.css
@@ -350,7 +350,7 @@ body   {
 .close {
   display: inline-block;
   cursor: pointer;
-  font-size: 100px;
+  font-size: 80px;
   color: #212121;
   text-decoration: none;
   transition: 0.5s;
@@ -411,7 +411,7 @@ body   {
 .logo {
   grid-column: 3 / 6 ;
   position: relative;
-  font-size: 70px;
+  font-size: 50px;
   text-align: center;
   font-weight: bolder;
   padding-top: 25px;
@@ -437,21 +437,41 @@ body   {
   grid-column: 6 / 7 ;
   grid-row: 3 ;
   border-radius: 50%;
+  width: 160px;
   }
 
+  .downloadabout {
+    grid-column: 6 / 8 ;
+    grid-row: 5 ;
+    height:40px;
+    }
 
 .name {
   grid-column: 3 / 6 ;
   grid-row: 3/4 ;
-  font-size: 60px;
+  font-size: 40px;
   color: #005F63;
   text-align: center;
 }
 
 h1 {
-  grid-column: 2 / 5 ;
+  grid-column: 2 / 4 ;
   float:left;
-  font-size: 55px;
+  font-size: 40px;
+}
+
+.position {
+  grid-column: 3 / 5 ;
+  grid-row: 3 ;
+}
+
+h3 {
+  font-size: 25px;
+  padding-top: 0;;
+}
+
+span {
+  font-size: 20px;
 }
 
 .viewportfolio {
@@ -513,6 +533,17 @@ h1 {
     background-color: #631A00 ;
     font-style: bold;
   }
+
+/*About page*/
+
+.longtext {
+	display: none
+}
+
+
+.shorttext {
+  grid-column: 3 / 6; 
+}
 
 
 /* Social media links */
@@ -704,8 +735,6 @@ h1 {
   .position {
     grid-column: 3 / 5 ;
     grid-row: 3 ;
-
-
   }
 
 
