--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,9 @@ body   {
     height: 100%;
     transition: 0.5s;
     padding-top: 10px;
+    color: #212121;
+    font-size: 50px;
+
   }
   
   .overlay-content {
