--- a/styles.css
+++ b/styles.css
@@ -244,6 +244,10 @@ body   {
   
 
     /*About page*/
+
+    /*
+    https://codepen.io/maxds/pen/jgeoA
+    */
     .readmore {
       max-height: 2em;
       overflow: hidden;
