work started with list

--- a/styles.css
+++ b/styles.css
@@ -246,7 +246,7 @@ body   {
     /*About page*/
 
     /*
-    https://codepen.io/maxds/pen/jgeoA
+    https://code.sololearn.com/WkeM7P3Mx6p3/#html
     */
     .readmore {
       max-height: 2em;
