--- a/styles.css
+++ b/styles.css
@@ -71,9 +71,8 @@ body   {
     color: #E4F4F3 ;
     display: block;
     padding-top: 30px;
-    /*margin-bottom: 4px;*/
     text-decoration: none;
-    transition: 0.3s;
+    transition: 0.2s;
     position: relative;
   }
   .overlay-content a:after {
@@ -132,16 +131,38 @@ body   {
   
   
   .viewportfolio {
-   /* background-color: rgb(144, 185, 196) ;*/
-    font-size: 20px;
+    font-size: 18px;
+    font-weight: bold;
     text-align: center;
-    padding-top: 20px;
-    /*box-shadow: #212121 ; */
+    padding-top: 0px;
     border-radius: 5px;
     grid-column: 3 / 6 ;
     grid-row: 5;
+    height: 30px;
+    width: 170px;
+    margin-left: -10px;
+  }
+
+
+  .viewportfolio:hover {
+    background-color: #631A00 ;
   }
   
+
+  /* for magnifying glass code https://www.fileformat.info/info/unicode/char/1f50d/index.htm */
+  .viewp {
+    text-decoration: none;
+    color: #212121 ;
+    font-style: bold;
+    text-align: center;
+  }
+
+  .viewp:hover {
+    background-color: #631A00 ;
+    color: #E4F4F3;
+  }
+  
+
   h1 {
     grid-column: 2 / 4 ;
     float:left;
@@ -159,23 +180,6 @@ body   {
   span {
     font-size: 12px;
   }
-
-  .viewportfolio:hover {
-    background-color: #631A00 ;
-  }
-  
-  .viewp {
-    text-decoration: none;
-    color: #212121 ;
-    font-style: bold;
-    text-align: center;
-  }
-
-  .viewp:hover {
-    background-color: #631A00 ;
-    color: #E4F4F3;
-  }
-  
 
     .circleabout {
       display: inline;
@@ -249,29 +253,48 @@ body   {
     https://code.sololearn.com/WkeM7P3Mx6p3/#html
     */
     .readmore {
-      max-height: 2em;
       overflow: hidden;
       color: rgba(0,0,0,.2);
-      
       transition: all .5s;
+      height: 150px;
+      width: 100px;
+      overflow-y: scroll;
+      scrollbar-width: 2px;
+      
   }
   
   .readmore::before {
       content: "Read more ...";
-      font-weight: 600;
+      font-weight: bold;
       color: initial;
   }
   
   .readmore:hover {
       color: initial;
-      max-height: 100vh;
-      overflow: initial;
-      text-indent: 30px;
   }
   
   .readmore:hover::before {
       content: "";
   }
+
+
+
+  ::-webkit-scrollbar {
+    width: 2px;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: rgb(186, 231, 228);                    /*background color of top part of the scroll bar*/
+  }
+  
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 55px rgb(172, 212, 210);           /*background color of the bottom part of the scroll bar*/
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #631A00;                               /*background of the top of the scroll bar when mouse is over it*/
+  }
+
 
   
 
@@ -501,13 +524,13 @@ span {
 
 .viewportfolio {
   padding-top: 0px;
-  background-color: rgb(144, 185, 196) ;
-  font-size: 40px;
+  font-size: 24px;
   text-align: center;
-  padding-top: 40px;
-  /*box-shadow: #212121 ; */
-  grid-column: 3 / 6 ;
-  grid-row: 5;
+  grid-column: 7 / 8 ;
+  grid-row: 5 ;
+  height:50px;
+  width: 200px;
+  margin-left: -25px;
 }
 
 .viewportfolio:hover {
@@ -567,7 +590,6 @@ span {
   max-height: 2em;
   overflow: hidden;
   color: rgba(0,0,0,.2);
-  
   transition: all .5s;
 }
 
@@ -731,7 +753,7 @@ span {
   }
   
   .logo {
-    grid-column: 4 / 7 ;
+    grid-column: 3 / 7 ;
     position: relative;
     font-size: 40px;
     font-weight: bolder;
@@ -784,13 +806,14 @@ span {
 
 
   .viewportfolio {
-    padding-top: 25px;
-    background-color: rgb(144, 185, 196) ;
+    padding-top: 0px;
     font-size: 24px;
     text-align: center;
     grid-column: 7 / 8 ;
     grid-row: 5 ;
     height:50px;
+    width: 200px;
+    margin-left: -25px;
   }
   
   .viewportfolio:hover {
@@ -872,24 +895,21 @@ span {
 /*About page*/
 
 .readmore {
-  max-height: 2em;
   overflow: hidden;
   color: rgba(0,0,0,.2);
-  
   transition: all .5s;
+  width: 100%;
 }
 
 .readmore::before {
   content: "Read more ...";
-  font-weight: 600;
+  font-weight: bold;
   color: initial;
 }
 
 .readmore:hover {
   color: initial;
-  max-height: 100vh;
   overflow: initial;
-  text-indent: 30px;
 }
 
 .readmore:hover::before {
