--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,7 @@ body   {
     height: 30px;
     width: 170px;
     margin-left: -10px;
+    padding-top: 12px;
   }
 
 
@@ -198,7 +199,7 @@ body   {
   /* For buttons styles https://codepen.io/benngagne/pen/bCkyr*/
   .buttons {
       border-radius: 5px;
-      font-size: 14px;
+      font-size: 12px;
       text-decoration: none;
       margin: 0px;
       color: #E4F4F3 ;
@@ -209,6 +210,8 @@ body   {
       margin-top: 30px;
       margin-left: 10px;
       padding-top: 15px;
+      padding-left: 5px;
+      padding-right:5px
     }
   
     .buttons:active{
@@ -242,8 +245,10 @@ body   {
       box-shadow: #212121 ;
       padding-top: 15px;
       height: 30px;
-      font-size: 14px;
+      font-size: 12px;
       border-radius: 5%;
+      padding-left: 5px;
+      padding-right: 5px;
     }
   
 
